styles.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Open Sans', sans-serif;
    color: hsl(0, 0%, 0%);
}

h1, p {
   animation: translate 2s;
   -webkit-animation: translate 2s;
   -moz-animation: translate 2s;
   animation-iteration-count: 1;
   -webkit-animation-iteration-count: 1;
   -moz-animation-iteration-count: 1;
   -o-animation-iteration-count: 1;
}

@keyframes translate {
    0% {
        transform: translateY(-40px);
        opacity: 0;
    }

    100% {
        transform: translateY(0px);
        opacity: 100;
    }
}

section {
    height: 100vh;
    margin: 0;
    padding: 0;
}

.header {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
  gap: 10px;
  background-color: hsl(0, 0%, 0%);
}

.logo {
    margin-right: auto;
    color: hsl(0, 0%, 100%);
    animation: unset;
}

.header-link {
    text-decoration: none;
    color: hsl(0, 0%, 100%);
}

.header-link:hover {
    transform: translateY(5px);
    transition: .3s ease-in-out;
}

.burger {
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 18px;
    position: relative;
}

.burger-section {
    width: 20px;
    padding: 2px;
    background-color: hsl(0, 0%, 100%);
    border-radius: 5px;
}

.burger-dropdown {
    position: absolute;
    opacity: 0;
}


.main-section {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 2rem;
    gap: 1rem;
}

.main-image {
    max-width: 400px;
}

.main-image:hover {
    transform: scale(1.1);
    transition: .3s ease-in-out;
}

.content-wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 1rem;
    padding: 1rem;
    width: 30vw;
}

.title {
    text-align: left;
}

.info {
    color: hsl(0, 0%, 30%);
}

.sign-up-btn {
    background-color: hsl(0, 0%, 0%);
    color: white;
    border: unset;
    width: 15vw;
    border-radius: 10px;
}

.sign-up-btn:hover {
    transform: scale(1.3);
    transition: .3s ease-in-out;
}

.sneakers-section {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    background-color: hsl(0, 0%, 0%);
}

.sneakers-image {
    max-width: 200px;
    object-fit: cover;
}

.sneakers-image:hover {
    transform: scale(1.2);
    transition: .3s ease-in-out;
}

.sneakers-text {
    font-size: 1rem;
    font-weight: 800;
    color: hsl(0, 0%, 100%);
}


.quote-section {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.quote-author {
    font-weight: 400;
}

.quote-image {
    max-width: 600px;
    position: absolute;
    z-index: -1;
    opacity: 50%;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: hsl(0, 0%, 0%);
    height: 5vh;
}

.site-author {
    color:hsl(0, 0%, 100%);
    animation: unset;
    font-weight: 600;
}


@media screen and (max-width: 800px) {
    .header-link {
        display: none;
    }

    .burger {
        display: flex;
    }

    .main-section {
        flex-direction: column;
    } 

    .main-image {
        max-width: 300px;
    }

    .content-wrapper {
        width: 60vw;
    }

    .sneakers-section {
        flex-direction: column;
        height: 200vh;
    }

    .quote-image {
        max-width: 450px;
    }
    
}


@media screen and (max-width: 400px) {
    .content-wrapper {
        width: 80vw;
    }

    .quote-image {
        max-width: 300px;
    }

    .quote {
        font-size: 16px;
    }
}

